# run-map

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: DISCUSSION.md  PERF-PLAN.md  SPEC.md  TODO.md  UX-AUDIT.md
docs/superpowers/plans/: 2026-05-14-ux-audit.md
docs/superpowers/specs/: 2026-05-14-ux-audit-design.md
src/run_map/: activity_types.py  api.py  app.py  db.py  ingest_bulk.py  ingest_strava.py  parsers.py
src/run_map/static/: app.js  index.html  style.css
tests/: README.md  conftest.py  test_activity_types.py  test_api.py  test_ingest.py  test_smoke.py
