[project]
name = "run-map"
version = "0.1.0"
description = "Personal run-history map — click a point to find when you ran there"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "streamlit>=1.36",
    "streamlit-folium>=0.22",
    "folium>=0.17",
    "gpxpy>=1.6",
    "fitdecode>=0.10",
    "shapely>=2.0",
    "httpx>=0.27",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/run_map"]
